# asdo-firmware

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  ui.c  ui.h
